任务模块完成了通知的集成