@@ -23,6 +23,7 @@ import hbnu.project.zhiyanproject.repository.TaskRepository;
 import hbnu.project.zhiyanproject.repository.TaskUserRepository;
 import hbnu.project.zhiyanproject.service.ProjectMemberService;
 import hbnu.project.zhiyanproject.service.TaskService;
+import hbnu.project.zhiyanproject.utils.message.TaskMessageUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -58,6 +59,8 @@ public class TaskServiceImpl implements TaskService {
     // 新增：task_user关联表Repository
     private final TaskUserRepository taskUserRepository;
 
+    private final TaskMessageUtils taskMessageUtils;
+
     // ==================== 任务创建与管理 ====================
 
     @Override
@@ -91,7 +94,7 @@ public class TaskServiceImpl implements TaskService {
                 .description(request.getDescription())
                 .status(TaskStatus.TODO) // 新创建的任务默认为待办
                 .priority(request.getPriority() != null ? request.getPriority() : TaskPriority.MEDIUM)
-                .assigneeId("[]")  // ✅ 废弃字段，设为空
+                .assigneeId("[]")  // 暂时废弃字段，设为空
                 .dueDate(request.getDueDate())
                 .worktime(request.getWorktime())
                 .requiredPeople(request.getRequiredPeople() != null ? request.getRequiredPeople() : 1)
@@ -118,12 +121,18 @@ public class TaskServiceImpl implements TaskService {
             
             taskUserRepository.saveAll(taskUsers);
             log.info("✅ 创建任务并分配执行者: taskId={}, assignees={}", saved.getId(), assigneeIds);
+
+            // 发送任务创建通知
+            taskMessageUtils.sendTaskCreatedNotification(saved, creatorId, assigneeIds);
+
+            // 如果分配人数达到任务要求人数，发送人数已满通知
+            if (assigneeIds.size() == saved.getRequiredPeople()) {
+                taskMessageUtils.sendTaskFullNotification(saved, assigneeIds);
+            }
         }
         
         log.info("创建任务成功: taskId={}, projectId={}, title={}, creator={}", 
                 saved.getId(), projectId, request.getTitle(), creatorId);
-
-        // TODO: 发布"任务已创建"事件到消息队列，通知执行者
 
         return saved;
     }
@@ -245,7 +254,8 @@ public class TaskServiceImpl implements TaskService {
         log.info("更新任务状态: taskId={}, {} -> {}, operator={}", 
                 taskId, oldStatus, newStatus, operatorId);
 
-        // TODO: 发布"任务状态变更"事件，通知相关人员
+        // 布"任务状态变更"事件，通知相关人员
+        taskMessageUtils.sendTaskStatusChangedNotification(saved, oldStatus, newStatus, operatorId);
 
         return saved;
     }
@@ -276,7 +286,7 @@ public class TaskServiceImpl implements TaskService {
             }
         }
 
-        // 4. ✅ 软删除旧的task_user记录
+        // 4. 软删除旧的task_user记录
         Instant now = Instant.now();
         taskUserRepository.deactivateTaskAssignees(taskId, now, operatorId);
         
@@ -305,7 +315,7 @@ public class TaskServiceImpl implements TaskService {
                     // 不存在，创建新记录
                     newAssignees.add(TaskUser.builder()
                             .taskId(taskId)
-                            .projectId(task.getProjectId())  // ✅ 冗余project_id
+                            .projectId(task.getProjectId())  // 冗余project_id
                             .userId(userId)
                             .assignType(AssignType.ASSIGNED)  // 分配类型
                             .assignedBy(operatorId)
@@ -324,7 +334,7 @@ public class TaskServiceImpl implements TaskService {
         // 6. 更新assigneeId字段为空（废弃字段）
         task.setAssigneeId("[]");
 
-        // 7. 如果任务状态是TODO，自动改为IN_PROGRESS
+        // 7. 如果任务状态是TO DO，自动改为IN_PROGRESS
         if (task.getStatus() == TaskStatus.TODO && assigneeIds != null && !assigneeIds.isEmpty()) {
             task.setStatus(TaskStatus.IN_PROGRESS);
             log.info("任务状态自动从TODO更新为IN_PROGRESS");
@@ -335,7 +345,15 @@ public class TaskServiceImpl implements TaskService {
         log.info("✅ 重新分配任务: taskId={}, assigneeIds={}, newStatus={}, operator={}", 
                 taskId, assigneeIds, saved.getStatus(), operatorId);
 
-        // TODO: 发布"任务已重新分配"事件，通知新的执行者
+        // 发布"任务已重新分配"事件，通知新的执行者
+        taskMessageUtils.sendTaskAssignedNotification(saved, assigneeIds, operatorId);
+
+        // 如果分配后人数达到任务要求人数，发送人数已满通知
+        long currentExecutorCounts = taskUserRepository.countActiveExecutorsByTaskId(taskId);
+        if (currentExecutorCounts == task.getRequiredPeople()) {
+            List<Long> allAssigneeIds = taskMessageUtils.getTaskAssigneeIds(taskId);
+            taskMessageUtils.sendTaskFullNotification(saved, allAssigneeIds);
+        }
 
         return saved;
     }
@@ -393,9 +411,20 @@ public class TaskServiceImpl implements TaskService {
                     .build();
             
             taskUserRepository.save(taskUser);
+
+            // 发送任务接取通知
+            taskMessageUtils.sendTaskClaimedNotification(task, userId);
+
+            // 如果接取后人数达到任务要求人数，发送人数已满通知
+            long currentExecutorCounts = taskUserRepository.countActiveExecutorsByTaskId(taskId);
+            if (currentExecutorCounts == task.getRequiredPeople()) {
+                List<Long> allAssigneeIds = taskMessageUtils.getTaskAssigneeIds(taskId);
+                taskMessageUtils.sendTaskFullNotification(task, allAssigneeIds);
+            }
+
         }
 
-        // 6. 如果任务状态是TODO，自动改为IN_PROGRESS
+        // 6. 如果任务状态是TO DO，自动改为IN_PROGRESS
         if (task.getStatus() == TaskStatus.TODO) {
             task.setStatus(TaskStatus.IN_PROGRESS);
         }
@@ -403,8 +432,6 @@ public class TaskServiceImpl implements TaskService {
         Tasks saved = taskRepository.save(task);
 
         log.info("✅ 用户接取任务: taskId={}, userId={}", taskId, userId);
-
-        // TODO: 发布"任务已接取"事件，通知项目成员
 
         return saved;
     }
@@ -659,7 +686,7 @@ public class TaskServiceImpl implements TaskService {
         // 过滤已删除的任务
         List<Tasks> activeTasks = tasks.stream()
                 .filter(t -> !t.getIsDeleted())
-                .collect(Collectors.toList());
+                .toList();
         
         // 4. 统计各状态任务数量
         long todoCount = activeTasks.stream()
@@ -1001,21 +1028,4 @@ public class TaskServiceImpl implements TaskService {
             return "[]";
         }
     }
-
-    /**
-     * 将JSON字符串转换为ID列表
-     */
-    private List<Long> convertJsonToList(String json) {
-        if (json == null || json.trim().isEmpty() || "[]".equals(json)) {
-            return Collections.emptyList();
-        }
-        try {
-            return objectMapper.readValue(json, 
-                    objectMapper.getTypeFactory().constructCollectionType(List.class, Long.class));
-        } catch (JsonProcessingException e) {
-            log.error("解析JSON为ID列表失败: json={}", json, e);
-            return Collections.emptyList();
-        }
-    }
-
 }
